fix: make animated content visible by default

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1753,7 +1753,7 @@ form button:hover {
 }
 
 /* Observer animation */
-.hidden {
+.js-enabled .hidden:not(.show) {
     opacity: 0;
     filter: blur(5px);
     transform: translateX(-100%);
@@ -2603,7 +2603,7 @@ h1, h2, h3, h4, h5, h6 {
     display: none;
 }
 
-.animate.hidden {
+.js-enabled .animate.hidden:not(.show) {
     opacity: 0;
     filter: blur(8px);
     transform: translateY(28px);
